# llm-ux-graph-reasoner

./: .env  CHANGES.md  FULL_ANALYSIS_GUIDE.md  IMPLEMENTATION_STATUS.md  README.md  SCRIPTS_README.md  TOKEN_COUNTER.md  analyze_and_report.py  analyze_and_report_en_v1.py  analyze_any.py  analyze_any_text.py  analyze_large_text.py  analyze_short.py  analyze_subset.py  analyze_text.py  analyze_text_en.py  apply_webvtt_fixes.py  fix_and_open.py  fix_links.py  fix_report.py  fix_report_improved.py  fix_report_simple.py  fix_webvtt_segmenter.py  improve_report.py  improve_report_en.py  improve_report_en_v1.py  list_models.py  llm_analyzer.py  llm_segmenter.py  merged.txt  original_fix.py  pyproject.toml  run_analysis.py  run_analysis_en.sh  self_building_graph.py  simple_analyzer.py  simple_graph_builder.py  test_contextual.py  test_expand.py  test_report.py  (+2 more)
.scripts/: README.md  analyze_large_file.sh  batch_process.sh  config.sh  process_text.sh  update_config.sh
documentation/: app_flow.md  cursorrules.md  full_project_description.md  implementation_plan.md  prd.md  project_structure.md  tech_stack.md
output/: knowledge_graph.html  knowledge_graph_fixed.html  report.html
output/20250306_061105/: research_report.html
output/20250306_062003/: report.html
output/20250306_062243/: report.html
output/20250306_062600/: report.html
output/20250306_062746/: report.html
output/20250306_063450/: report.html
output/20250306_192806/: report.html
src/: create_report_html.py  main.py  test_report.py  test_report_simple.py  test_segments.py  update_expansion_data.py
(+2114 files in other folders)
